remove some input stream closes